fixed border alignment

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,7 @@ body{
 	display: flex;
 	padding: 20px 27px;
 	flex-basis: 80%;
+	box-sizing: border-box;
 }
 .logo-container{
 	border-right: 1px solid #b6c3c9;
@@ -89,6 +90,7 @@ body{
 	background: #f5f5f5;
   height: calc(100vh - 100px);
   overflow-x: auto;
+  box-sizing: border-box;
 }
 .summary{
 	margin-bottom: 50px;
